--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "engines": {
     "node": ">=18.16.0"
   },
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
+    "start": "node ./bin/www.js",
+    "devstart": "nodemon ./bin/www.js",
     "serverstart": "DEBUG=odin-blog-api:* npm run devstart"
   },
   "dependencies": {
