--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www.js",
-    "devstart": "nodemon ./bin/www.js",
+    "start": "node ./src_server/bin/www.js",
+    "devstart": "nodemon ./src_server/bin/www.js",
     "serverstart": "DEBUG=odin-blog-api:* npm run devstart"
   },
   "dependencies": {
