--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.8.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
