--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node ./src_server/bin/www.js",
-    "devstart": "nodemon ./src_server/bin/www.js",
-    "serverstart": "DEBUG=odin-blog-api:* npm run devstart"
+    "clientuserstart": "vite",
+    "clientadminstart": "vite",
+    "serverstart": "node ./src_server/bin/www.js",
+    "serverstartdev": "nodemon ./src_server/bin/www.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -31,9 +32,21 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prop-types": "^15.8.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "nodemon": "^3.0.1",
+    "vite": "^4.4.5"
   }
 }
