Set build commands for vite+react applications in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "clientstartuser": "vite ./src_client_user",
     "clientstartadmin": "vite ./src_client_admin",
+    "clientbuilduser": "vite build ./src_client_user",
+    "clientbuildadmin": "vite build ./src_client_admin",
     "serverstart": "node ./src_server/bin/www.js",
     "serverstartdev": "nodemon ./src_server/bin/www.js"
   },
