Specify host address for vite+react applications

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "type": "module",
   "scripts": {
-    "clientstartuser": "vite ./src_client_user",
-    "clientstartadmin": "vite ./src_client_admin",
+    "clientstartuser": "vite --host 0.0.0.0 ./src_client_user",
+    "clientstartadmin": "vite --host 0.0.0.0 ./src_client_admin",
     "clientbuilduser": "vite build ./src_client_user",
     "clientbuildadmin": "vite build ./src_client_admin",
     "serverstart": "node ./src_server/bin/www.js",
